# demo-io

./: .gitignore
basic/error-handler/: CMakeLists.txt  README.md
basic/error-handler/include/: search_error.hpp  search_service.hpp
basic/error-handler/src/: main.cpp  search_error.cpp  search_service.cpp
copyfiles/: CMakeLists.txt  design_overview.md
copyfiles/src/: main.cpp
copyfiles/src/algorithms/: DefaultCopyAlgorithm.cpp  DefaultCopyAlgorithm.h  synccopyalgorithm.cpp  synccopyalgorithm.h
copyfiles/src/core/: CopyAlgorithm.cpp  CopyAlgorithm.h  CopyTask.cpp  CopyTask.h  CopyTaskManager.cpp  CopyTaskManager.h  CopyWorker.cpp  CopyWorker.h  FileSystemUtils.cpp  FileSystemUtils.h  ProgressObserver.h
copyfiles/src/hooks/: TaskHooks.cpp  TaskHooks.h
copyfiles/src/ui/: MainWindow.cpp  MainWindow.h  ProgressDialog.cpp  ProgressDialog.h
framework/dde-file-manager/: CMakeLists.txt  KIO Worker框架技术分析.md
framework/dde-file-manager/src/core/: CMakeLists.txt  connection.cpp  connection.h  job.cpp  job.h  scheduler.cpp  scheduler.h  worker.cpp  worker.h  workermanager.cpp  workermanager.h  workerplugin.h
framework/dde-file-manager/src/worker/: CMakeLists.txt  main.cpp  workerprocess.cpp  workerprocess.h
framework/dde-file-manager/src/workers/: CMakeLists.txt
framework/dde-file-manager/tests/: CMakeLists.txt  main.cpp  test_connection.cpp  test_connection.h  test_scheduler.cpp  test_workermanager.cpp
framework/master-salve2/: CMakeLists.txt  README.md
framework/master-salve2/apps/: CMakeLists.txt
framework/master-salve2/apps/worker_process/: CMakeLists.txt
framework/master-salve2/common/: CMakeLists.txt
framework/master-salve2/example/: CMakeLists.txt
framework/master-salve2/example/src/: main.cpp
framework/master-salve2/framework/: CMakeLists.txt
framework/master-salve2/framework/src/: common.cpp  message.cpp  plugin_loader.cpp  worker_base.cpp  worker_manager.cpp  worker_process.cpp
framework/master-salve2/plugins/: CMakeLists.txt
framework/master-salve2/plugins/image_processor/: CMakeLists.txt  metadata.json
framework/master-salve2/src/master/: CMakeLists.txt  main.cpp  master.cpp  master.h
framework/master-salve2/src/slave/: CMakeLists.txt  image_processor.cpp  main.cpp  slave.h
framework/master-salve2/tools/: CMakeLists.txt
framework/master-salve2/tools/test_client/: CMakeLists.txt
framework/master-salve2/worker/: CMakeLists.txt
framework/master-salve2/worker/src/: main.cpp  plugin_manager.cpp  worker.cpp
framework/master-salve2/workers/: CMakeLists.txt
framework/master-salve2/workers/image_processor/: CMakeLists.txt
framework/master-slave/: CMakeLists.txt
framework/master-slave/common/: message.h  protocol.h
framework/master-slave/src/slave/: image_processor.h  slave.cpp  task_executor.cpp
framework/simple-master-slave/: CMakeLists.txt
framework/simple-master-slave/client/: client.cpp  client.h  main.cpp
framework/simple-master-slave/server/: main.cpp  server.cpp  server.h
framework/util-dfm/util-dfm/: CMakeLists.txt  design.md
framework/util-dfm/util-dfm/dde-file-manager-core/: CMakeLists.txt  commands.cpp  commands.h  connection.cpp  connection.h  errorcodes.h  (+23 more)
search/AnythingSearch/: CMakeLists.txt  anythingsearcher.cpp  anythingsearcher.h  main.cpp  mainwindow.cpp  mainwindow.h  mocksearcher.cpp  mocksearcher.h  resultprocessor.cpp  resultprocessor.h  searcherinterface.h  searchmanager.cpp  searchmanager.h
search/AnythingSearch2/: CMakeLists.txt
search/AnythingSearch2/resources/: resources.qrc
search/AnythingSearch2/src/: basicsearchengine.cpp  basicsearchengine.h  filedata.h  fileitemdelegate.cpp  fileitemdelegate.h  filelistmodel.cpp  filelistmodel.h  lucenesearchengine.cpp  lucenesearchengine.h  mainwindow.cpp  mainwindow.h  searchengine.h  searchmanager.cpp  searchmanager.h
search/api3/: CMakeLists.txt
search/api3/cmake/: QSearchConfig.cmake.in  qsearch.pc.in
search/api3/examples/: CMakeLists.txt
search/api3/src/: index_manager.cpp  search_manager.cpp  search_options.cpp  search_query.cpp  search_result.cpp
search/content-search/: CMakeLists.txt
search/content-search/src/: contentsearcher.cpp  contentsearcher.h  main.cpp
search/dfm-search/: CMakeLists.txt
search/dfm-search/examples/: CMakeLists.txt
search/dfm-search/src/: CMakeLists.txt
search/dfm-search/tests/: CMakeLists.txt
search/dfm-search2/dfm-search/: CMakeLists.txt  README.md
search/dfm-search3/dfm-search/: CMakeLists.txt  README.md
search/dfm-search4/: CMakeLists.txt
search/dfm-search4/example/: CMakeLists.txt  combined_search.cpp  find_grep_example.cpp  main.cpp  realtime_search.cpp  search_api_demo.cpp
search/dfm-search4/ref/: contentsearcher.cpp  contentsearcher.h  lucenesearchengine.cpp  lucenesearchengine.h
search/dfm-search4/src/: CMakeLists.txt
search/file-events/: CMakeLists.txt
search/file-events/src/: main.cpp
search/full-text-search/: CMakeLists.txt
search/full-text-search/indexer/: CMakeLists.txt  main.cpp
search/full-text-search/searcher/: CMakeLists.txt  main.cpp
search/luence_test/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  searchengine.cpp  searchengine.h
thumb/office/: .gitignore  CMakeLists.txt  README.md  USAGE_GUIDE.md  build.sh  test_converter.cpp  test_document.docx  test_document.txt
thumb/office/src/: MainWindow.cpp  MainWindow.h  OfficeConverter.cpp  OfficeConverter.h  OfficePreviewWidget.cpp  OfficePreviewWidget.h  main.cpp
thumb/ppt/: CMakeLists.txt  PPTThumbnailViewer.pro  README.md  build.sh  test_kde_extraction.sh
thumb/ppt/src/: main.cpp  mainwindow.cpp  mainwindow.h  thumbnailextractor.cpp  thumbnailextractor.h  thumbnailgenerator.cpp  thumbnailgenerator.h  thumbnailwidget.cpp  thumbnailwidget.h
view/DiskSpaceIntelligentCleaning/: CMakeLists.txt  devicemanager.cpp  devicemanager.h  deviceutils.cpp  deviceutils.h  diskdetailwidget.cpp  diskdetailwidget.h  disklistwidget.cpp  disklistwidget.h  mainwindow.cpp  mainwindow.h  scanworker.cpp  scanworker.h
view/typelistview/: Blueprint.md  CMakeLists.txt  mainwindow.cpp  mainwindow.h  plan.md  plan_zh-cn.md
(+301 files in other folders)
